7/14/14 internal cleanup of HorizontalAligner
7/14/14 fill in correct coefficients only when 'playAll' query parameter is set
7/14/14 encapsulate and document query parameters in BCEQueryParameters
7/14/14 #66 remove 'move' feature from game dialog
# 1.0.0-dev.8 7/11/14
7/11/14 remove erroneous RSC credit, no funding was provided for this sim according to KP
7/11/14 #27 move initial position of game dialog up, to account for shorter game boxes, so that dialog doesn't cover buttons
7/11/14 #27 reduce height of game boxes from 360 to 340, which still looks comfortable for PCl5
7/11/14 #27 move reverse of C2H5OH equation to 2nd location in level-3 pool
# 1.0.0-dev.7 7/11/14
7/11/14 #27 move equations that present layout problems to the beginning of their pools, so that they are displayed first in dev testing
7/11/14 when running in dev mode, fill in the correct coefficients in all pickers
7/11/14 #74 add 'Skip' button to game in dev mode
7/11/14 #71 scale diameter of starts in LevelCompletedNode for levels with lots of stars
7/11/14 #71 support different numbers of equations per game level, to support 'playAll' query parameter
7/11/14 #72 show correct coefficients when running in dev mode
7/11/14 #71 add 'playAll' query parameter, to iterate over all possible challenges in the game
7/10/14 #55 check that both timerID and intervalID are null, so that vegas.NumberPicker doesn't get stuck
# 1.0.0-dev.6 7/7/14
7/7/14 #27 add option to specify font size for equations, so that we can have screen-specific sizes
7/7/14 adjust layout of pickers relative to symbols
7/7/14 fix: when pressing 'Continue' button at end of game, remove reward only if it exists
7/7/14 move initial position of game dialog down slightly
7/7/14 #67 more sophisticated drag bounds for game dialog, accounts for dialog dimensions
7/7/14 #67 crude drag bounds for game dialog
7/7/14 #67 clean up how location of game dialog is handled, in preparation for enforcing drag bounds