@@ -46,7 +46,7 @@ define( function( require ) {
       }
       self.equation = newEquation;
       self.equation.addCoefficientsObserver( coefficientsObserver );
-      self.centerX = self.aligner.centerXOffset;
+      self.centerX = self.aligner.getScreenCenterX();
       self.bottom = self.maxY;
     } );
   }
