@@ -16,19 +16,15 @@ define( function( require ) {
   var inherit = require( 'PHET_CORE/inherit' );
 
   /**
+   * @param {Number} screenWidth screen width
    * @param {DOT.Dimension2} boxSize size of one of the 2 boxes (both boxes are assumed to be the same size)
    * @param {Number} boxSeparation horizontal separation between the left and right boxes
-   * @param {Number} centerXOffset distance from left side of the screen to center
-   * @param {Number} minX for Screen
-   * @param {Number} maxX for Screen
    * @constructor
    */
-  function HorizontalAligner( boxSize, boxSeparation, centerXOffset, minX, maxX ) {
+  function HorizontalAligner( screenWidth, boxSize, boxXSpacing ) {
+    this.screenWidth = screenWidth; // @private
     this.boxSize = boxSize;
-    this.boxSeparation = boxSeparation;
-    this.centerXOffset = centerXOffset;
-    this.minX = minX;
-    this.maxX = maxX;
+    this.boxXSpacing = boxXSpacing; // @private
   }
 
   /**
@@ -81,7 +77,7 @@ define( function( require ) {
      * @param equation
      */
     getReactantXOffsets: function( equation ) {
-      var boxLeft = this.centerXOffset - this.boxSize.width - this.boxSeparation / 2;
+      var boxLeft = this.screenWidth / 2 - this.boxSize.width - this.boxXSpacing / 2;
       return getXOffsets( equation.reactants, this.boxSize.width, boxLeft, 'right' );
     },
 
@@ -91,8 +87,38 @@ define( function( require ) {
      * @param equation
      */
     getProductXOffsets: function( equation ) {
-      var boxLeft = this.centerXOffset + this.boxSeparation / 2;
+      var boxLeft = this.screenWidth / 2 + this.boxXSpacing / 2;
       return getXOffsets( equation.products, this.boxSize.width, boxLeft, 'left' );
+    },
+
+    getScreenLeft: function() { return 0; },
+
+    getScreenRight: function() { return this.screenWidth; },
+
+    getScreenCenterX: function() { return this.screenWidth / 2; },
+
+    getReactantsBoxLeft: function() {
+      return this.getScreenCenterX() - this.boxXSpacing / 2 - this.boxSize.width;
+    },
+
+    getProductsBoxLeft: function() {
+      return this.getScreenCenterX() + this.boxXSpacing / 2;
+    },
+
+    getReactantsBoxRight: function() {
+      return this.getScreenCenterX() - this.boxXSpacing / 2;
+    },
+
+    getProductsBoxRight: function() {
+      return this.getScreenCenterX() + this.boxXSpacing / 2 + this.boxSize.width;
+    },
+
+    getReactantsBoxCenterX: function() {
+      return this.getScreenCenterX() - this.boxXSpacing / 2 - this.boxSize.width / 2;
+    },
+
+    getProductsBoxCenterX: function() {
+      return this.getScreenCenterX() + this.boxXSpacing / 2 + this.boxSize.width / 2;
     }
   } );
 } );
